tests/ui/privacy/private-field-struct-construction-76077.stderr
error: cannot construct `Foo` with struct literal syntax due to private fields
  --> $DIR/private-field-struct-construction-76077.rs:9:5
   |
LL |     foo::Foo {};
   |     ^^^^^^^^
   |
   = note: private field `you_cant_use_this_field` that was not provided

error: aborting due to 1 previous error

